--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,13 @@ services:
 
 before_script: pip install docker-compose
 
+# Install the codecov pip dependency
+install:
+  - pip install codecov
+
 script:
   - docker-compose run app sh -c "python manage.py test && flake8"
+
+# Push the results back to codecov
+after_success:
+  - codecov
