--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,10 @@
 version: "3"
 
 services:
-  app:
+  backend:
     build:
       context: .
+    user: root
     ports:
       - "8000:8000"
     volumes:
