--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,8 @@ before_script:
   - pip install codecov
 
 script:
-  - docker-compose run app sh -c "python manage.py test && flake8"
-  - docker-compose run app sh -c "coverage run manage.py test"
+  - docker-compose run backend sh -c "python manage.py test && flake8"
+  - docker-compose run backend sh -c "coverage run manage.py test"
 
 # Push the results back to codecov
 after_success:
