--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,8 @@ services:
 
 before_script:
   - pip install docker-compose
-  - pip install codecov
 
 script:
   - docker-compose run backend sh -c "python manage.py test && flake8"
   - docker-compose run backend sh -c "coverage run manage.py test"
-
-# Push the results back to codecov
-after_success:
-  - codecov
+  - docker-compose run -e CODECOV_TOKEN=${CODECOV_TOKEN} backend sh -c "bash <(curl -s https://codecov.io/bash)"
