--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       - DB_NAME=app
       - DB_USER=postgres
       - DB_PASS=supersecret
+      - CODECOV_TOKEN=${CODECOV_TOKEN}
     depends_on:
       - db
 
